[package]
name = "tartan"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
image = { version = "0.23" }
imageproc = { version = "0.22" }
regex = { version = "1.5.4", features = ["std"], default-features = false }
tartanlib = { path = "crates/tartanlib" }
