[package]
name = "tartan"
version = "0.3.0"
license = "MIT OR GPL-3.0-or-later"
description = "Tartan pattern parser and creator"
repository = "https://github.com/batisteo/tartan"
homepage = "https://github.com/batisteo/tartan#readme"
edition = "2021"

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
hex = { version = "0.4" }
image = { version = "0.23" }
imageproc = { version = "0.22" }
regex = { version = "1.5.4", features = ["std"], default-features = false }
tartanlib = "0.3.0"

[patch.crates-io]
tartanlib = { path = "crates/tartanlib" }
