[package]
name = "breacan"
version = "0.1.0"
authors = ["Baptiste Darthenay <baptiste.darthenay@gmail.com>"]
description = "A tartan generator"
repository = "https://github.com/batisteo/tartan/tree/main/examples/breacan"
license = "WTFPL"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tartanlib = "*"
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "ImageData",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
default = ["console_error_panic_hook" ,"wee_alloc"]
